# cloud-scanner

./: compose.yml  readme.md
backend/: .gitignore  Dockerfile  a.py  app.py  pyproject.toml  requirements.txt
backend/scanner/: __init__.py  aws.py  db.py  file_scan.py  file_scanner.py  mitre_map.py  mitre_maps_registry.py  models.py  report_generator.py  reports.py  summarize_mitre.py  utils.py
backend/scanner/aws/: __init__.py  apigateway.py  cloudtrail.py  decorator.py  ebs.py  ec2.py  ec2_lambda.py  guardduty.py  iam.py  lambda_module.py  rds.py  s3.py  ssm.py
backend/scanner/grc/: calculators.py  compliance_engine.py  control_effectiveness.py  control_mapper.py  evidence_collector.py  report_generator.py  risk_engine.py  risk_scoring.py  schemas.py  trend.py
backend/scanner/grc_data/: cis_aws.json  control_registry.json  iso27001.json  nist_csf.json
backend/scanner/mitre_maps/: apigateway_mitre_map.py  cloudtrail_mitre_map.py  ebs_mitre_map.py  ec2_mitre_map.py  guardduty_mitre_map.py  iam_mitre_map.py  lambda_mitre_map.py  rds_mitre_map.py  s3_mitre_map.py  ssm_mitre_map.py
backend/scanner/reports/file_scan/: report.py  report_generator.py
backend/scanner/reports/service_scan/: report.py  report_generator.py
frontend/: Dockerfile  nginx.conf  openapi.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  openapi.d.ts  routeTree.gen.ts
frontend/src/components/: ScanFindingCard.tsx  credentials-card.tsx  credentials-dialog.tsx  file-scan-tab.tsx  findings-table.tsx  (+4 more)
(+34 files in other folders)
