[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.42",
    "fastapi[standard]>=0.118.0",
    "matplotlib>=3.10.6",
    "pymongo>=4.15.2",
    "redis>=7.0.1",
    "reportlab>=4.4.4",
    "vt-py>=0.21.0",
]
